WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276628
AX: active descendant not exposed when isolated tree mode is on
https://bugs.webkit.org/show_bug.cgi?id=276628
Summary
AX: active descendant not exposed when isolated tree mode is on
Dominic Mazzoni
Reported
2024-07-15 14:53:15 PDT
To repro, visit Kayak.com and click on the Round-trip combo box. VoiceOver focuses on the listbox that pops up, but usually (not always) fails to interact with the active option. If you manually check the accessibility API at that time, the list box usually (but not always) returns nothing for the active descendant, even though inspecting the DOM shows it's set. If you arrow to another option, the active descendant starts working. With ITM off it works correctly every time.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-07-15 14:53:22 PDT
<
rdar://problem/131784854
>
Dominic Mazzoni
Comment 2
2024-07-16 11:38:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30871
EWS
Comment 3
2024-07-17 00:52:32 PDT
Committed
281043@main
(348b978dc50e): <
https://commits.webkit.org/281043@main
> Reviewed commits have been landed. Closing PR #30871 and removing active labels.
EWS
Comment 4
2024-07-17 23:53:49 PDT
Committed
280938.42@integration/ci/131784854_348b978dc5_safari-7619-branch
(e040d5cc2497): <
https://commits.webkit.org/280938.42@integration/ci/131784854_348b978dc5_safari-7619-branch
> Reviewed commits have been landed. Closing PR #1401 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug