AX: active descendant not exposed when isolated tree mode is on https://bugs.webkit.org/show_bug.cgi?id=276628 rdar://131784854

Reviewed by Tyler Wilcock.

When a node gets a new renderer, such as when it changes visibility, a deferred cache update
is needed to ensure the new renderer is in the cache, and relations need to be recomputed.

However, it was possible for relations to be recomputed before the loop finished, so some
nodes that needed deferred cache updates wouldn't get taken into account and their
relations wouldn't be computed correctly. The fix is to mark relations dirty only at the
end of the loop after all of the nodes needing deferred updates had their AXIDs removed.

* LayoutTests/accessibility/mac/active-descendant-after-visibility-change-expected.txt: Added.
* LayoutTests/accessibility/mac/active-descendant-after-visibility-change.html: Added.
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::performDeferredCacheUpdate):

Canonical link: https://commits.webkit.org/281043@main